--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -116,44 +116,47 @@
             {% elif chosen_building %}
 
             <h3> Notifications for all devices in {{chosen_building}}</h3>
+            
             <div class="btn-toolbar mb-2 mb-md-0">
                 <button type="button" id="delete_building" class="btn btn-sm btn-outline-danger">Delete {{chosen_building}}</button>
             </div>
             {%else %}
-            <h3> All Notifications </h3>
+            <h3> All Notifications </h3> 
+            
             {% endif%}
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">Alert-Level</th>
+                            <th scope="col" class="text-center">#</th>
+                            <th scope="col" class="text-center">Date</th>
+                            <th scope="col" class="text-center">Alert-Level</th>
                             {% if not chosen_building and not chosen_device %}
-                            <th scope="col">Building</th>
-                            <th scope="col">Device</th>
+                            <th scope="col" class="text-center">Building</th>
+                            <th scope="col" class="text-center">Device</th>
                             {% elif not chosen_device%}
-                            <th scope="col">Device</th>
+                            <th scope="col" class="text-center">Device</th>
                             {% endif %}
 
-                            <th scope="col">Text</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="text-center">Text</th>
+                            <th scope="col" class="text-center"><button type="button" id="delete_notifications" class="btn btn-outline-danger btn-sm">Delete All Notifications</button></th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="notification_body">
                         {% for notification in notifications%}
+                        <tr></tr>
                         <tr id="{{notification['_id']}}">
-                            <td>{{loop.index}}</td>
-                            <td>{{notification["date"]}}</td>
-                            <td>{{notification["severity"]}}</td>
+                            <td class="text-center">{{loop.index}}</td>
+                            <td class="text-center">{{notification["date"]}}</td>
+                            <td class="text-center">{{notification["severity"]}}</td>
                             {% if not chosen_building and not chosen_device %}
-                            <td>{{notification["building"]}}</td>
-                            <td>{{notification["device"]}}</td>
+                            <td class="text-center">{{notification["building"]}}</td>
+                            <td class="text-center">{{notification["device"]}}</td>
                             {% elif not chosen_device%}
-                            <td>{{notification["device"]}}</td>
+                            <td class="text-center">{{notification["device"]}}</td>
                             {% endif %}
-                            <td>{{notification["text"]}}</td>
-                            <td>
+                            <td class="text-center">{{notification["text"]}}</td>
+                            <td class="text-center">
                                 <button type="button" onclick="delete_notification(this)" class="btn btn-danger btn-sm">X</button>
                             </td>
                         </tr>
